feat: implement /uuid endpoint
