# docs/swagger.json
@@ -741,6 +741,22 @@
                 }
             }
         },
+        "/uuid": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dynamic data"
+                ],
+                "summary": "Return a UUID4.",
+                "responses": {
+                    "200": {
+                        "description": "A UUID4."
+                    }
+                }
+            }
+        },
         "/xml": {
             "get": {
                 "produces": [
